// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateIndex > contains helper functions for getting regions 1`] = `
"// Auto-generated by geo-data - do not edit manually
// Regenerate with: npx geo-data update
import saData from './sa.json' with { type: "json" };

export const countries = {
  SA: saData,
} as const;

export type CountryCode = keyof typeof countries;
export type Country = (typeof countries)[CountryCode];
export type Region = Country['regions'][number];
export type City = Region['cities'][number];
export type LocalizedName = { name: { [key: string]: string | undefined; en: string } };

export function getCountry(code: CountryCode) {
  return countries[code];
}

export function getRegions(code: CountryCode) {
  return countries[code].regions;
}

export function getCities(code: CountryCode, regionCode?: string) {
  const regions = getRegions(code);
  if (regionCode) {
    const region = regions.find(r => r.code === regionCode);
    return region?.cities ?? [];
  }
  return regions.flatMap(r => r.cities);
}

export function getAllCities(code: CountryCode) {
  return getRegions(code).flatMap(r => r.cities);
}

export function getLocalizedName(item: { name: Record<string, string | undefined> & { en: string } }, lang: string = "en"): string {
  return item.name[lang] ?? item.name.en;
}

export function getCountryCodes(): CountryCode[] {
  return Object.keys(countries) as CountryCode[];
}

export function isValidCountryCode(code: string): code is CountryCode {
  return code in countries;
}
"
`;

exports[`generateIndex > generates correct JavaScript output 1`] = `
"// Auto-generated by geo-data - do not edit manually
// Regenerate with: npx geo-data update
import usData from './us.json' with { type: "json" };

export const countries = {
  US: usData,
} as const;

export function getCountry(code) {
  return countries[code];
}

export function getRegions(code) {
  return countries[code].regions;
}

export function getCities(code, regionCode) {
  const regions = getRegions(code);
  if (regionCode) {
    const region = regions.find(r => r.code === regionCode);
    return region?.cities ?? [];
  }
  return regions.flatMap(r => r.cities);
}

export function getAllCities(code) {
  return getRegions(code).flatMap(r => r.cities);
}

export function getLocalizedName(item, lang = "en") {
  return item.name[lang] ?? item.name.en;
}

export function getCountryCodes() {
  return Object.keys(countries);
}

export function isValidCountryCode(code) {
  return code in countries;
}
"
`;

exports[`generateIndex > generates correct TypeScript output with countries 1`] = `
"// Auto-generated by geo-data - do not edit manually
// Regenerate with: npx geo-data update
import aeData from './ae.json' with { type: "json" };
import saData from './sa.json' with { type: "json" };

export const countries = {
  AE: aeData,
  SA: saData,
} as const;

export type CountryCode = keyof typeof countries;
export type Country = (typeof countries)[CountryCode];
export type Region = Country['regions'][number];
export type City = Region['cities'][number];
export type LocalizedName = { name: { [key: string]: string | undefined; en: string } };

export function getCountry(code: CountryCode) {
  return countries[code];
}

export function getRegions(code: CountryCode) {
  return countries[code].regions;
}

export function getCities(code: CountryCode, regionCode?: string) {
  const regions = getRegions(code);
  if (regionCode) {
    const region = regions.find(r => r.code === regionCode);
    return region?.cities ?? [];
  }
  return regions.flatMap(r => r.cities);
}

export function getAllCities(code: CountryCode) {
  return getRegions(code).flatMap(r => r.cities);
}

export function getLocalizedName(item: { name: Record<string, string | undefined> & { en: string } }, lang: string = "en"): string {
  return item.name[lang] ?? item.name.en;
}

export function getCountryCodes(): CountryCode[] {
  return Object.keys(countries) as CountryCode[];
}

export function isValidCountryCode(code: string): code is CountryCode {
  return code in countries;
}
"
`;

exports[`generateIndex > handles empty directory 1`] = `
"// Auto-generated by geo-data - no countries installed yet
// Run: npx geo-data add <country>

export const countries = {} as const;
export type CountryCode = never;
"
`;

exports[`generateIndex > handles empty directory in JavaScript mode 1`] = `
"// Auto-generated by geo-data - no countries installed yet
// Run: npx geo-data add <country>

export const countries = {};
"
`;
